# day65

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp  simp_calc.cpp
